// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link functions correctly with children 1`] = `
<styled.a
  b150={true}
  href="http://wizeline.com/"
  onClick={[Function]}
  priority="b150"
  target="_blank"
  theme={
    Object {
      "textLink": "#50A5E7",
    }
  }
>
  hello
</styled.a>
`;

exports[`Link functions correctly without children 1`] = `
<styled.a
  b150={true}
  href="http://wizeline.com/"
  onClick={[Function]}
  priority="b150"
  target=""
  theme={
    Object {
      "textLink": "#50A5E7",
    }
  }
/>
`;
